--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Editor</title>
+<title>Editor</title>
   <style type="text/css" media="screen">
 
     .ace_editor {
@@ -33,8 +33,8 @@
     }
 
     .scrollmargin {
-        height: 120px;
-        text-align: left;
+	height: inherit;
+	text-align: left;
     }
 
     .large-button {
@@ -51,17 +51,41 @@
         border-radius: 10px 10px 10px 10px;
         box-shadow: 0 0 12px 0 lightblue;
     }
+  #apDiv1 {
+	position: absolute;
+	left: 5px;
+	top: 3px;
+	width: 552px;
+	height: 57px;
+	z-index: 1;
+}
+  #apDiv2 {
+	position: absolute;
+	left: 3px;
+	top: 91px;
+	width: 553px;
+	height: 214px;
+	z-index: 2;
+}
+  #apDiv3 {
+	position: absolute;
+	left: 2px;
+	top: 456px;
+	width: 555px;
+	height: 173px;
+	z-index: 3;
+}
   </style>
 </head>
 <body>
-<div class="scrollmargin">
-    <span onclick="run()" class="large-button">
-    run the code
-    </span>
-    <span onclick="add()" class="large-button" title="Shift+Enter">
-    download
-    </span>
-</div>
+<div id="apDiv1">    
+<span onclick="run()" class="large-button">
+    run
+</span>
+<span onclick="stop()" class="large-button" title="Shift+Enter">
+    stop
+</span></div>
+<div id="apDiv2">
 <pre id="editor">
 extern int led0;
 extern int led1;
@@ -77,7 +101,9 @@ int main(int argn, char* argv[])
 	return 0;
 }
 </pre>
+</div>
 
+<div id="apDiv3"></div>
 <script src="./src/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
 var $ = document.getElementById.bind(document);
@@ -99,16 +125,27 @@ var editor = ace.edit("editor");
 editor.setTheme("ace/theme/tomorrow");
 editor.session.setMode("ace/mode/c_cpp");
 
-
 function run() {
 	var code = editor.getValue();
 	var xhr = new XMLHttpRequest();
 	var post;	
 	console.log("run");
 	console.log(code);
-        xhr.open("post","run",false);
+    xhr.open("post","run",false);
 	xhr.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded")
 	post = encodeURIComponent("text") + "=" + encodeURIComponent(code) + "&";
+	xhr.send(post);
+	console.log(xhr.status);	
+
+}
+
+function stop() {
+	var xhr = new XMLHttpRequest();
+	var post;	
+	console.log("stop");
+    xhr.open("post","stop",false);
+	xhr.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded")
+	post = "";
 	xhr.send(post);
 	console.log(xhr.status);	
 
