--- a/index.html
+++ b/index.html
@@ -238,13 +238,24 @@ function ex6() {
 </script>
 
 <!-- 对话框 -->
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3 id="ModalLabel">API Reference Document</h3>
   </div>
   <div class="modal-body">
-    <p>对话框主体内容 ...…</p>
+    <p class="class="bg-info">Function led()</p>
+    <p class="class="bg-info">Function sleep()</p>
+    <p class="class="bg-info">Function printf()</p>
+    <p class="class="bg-info">Function test()</p>
+    <p class="class="bg-info">Function test()</p>
+    <p class="class="bg-info">Function test()</p>
+    <p class="class="bg-info">Function test()</p>
+    <p class="class="bg-info">Function test()</p>
+    <p class="class="bg-info">Function test()</p>
+    <p class="class="bg-info">Function test()</p>
+    <p class="class="bg-info">Function test()</p>
+    <p>Function test()</p>
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
