--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-  
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="js/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
 <title>Editor</title>
   <style type="text/css" media="screen">
 
@@ -44,10 +47,7 @@
 </style>
 </head>
 <body>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+
 <div id="IDE" class="">
 <span onclick="run()" class="btn btn-success" title="run the program">
     run
@@ -89,177 +89,182 @@ int main(int argn, char* argv[])
 </span>
 </div>
 
-
-
 <script src="./ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
-var $ = document.getElementById.bind(document);
-var dom = require("ace/lib/dom");
-
-//add command to all new editor instaces
-require("ace/commands/default_commands").commands.push({
-    name: "Toggle Fullscreen",
-    bindKey: "F11",
-    exec: function(editor) {
-        dom.toggleCssClass(document.body, "fullScreen")
-        dom.toggleCssClass(editor.container, "fullScreen")
-        editor.resize()
-    }
-})
-
-// create first editor
-var editor = ace.edit("editor");
-editor.setTheme("ace/theme/tomorrow");
-editor.session.setMode("ace/mode/c_cpp");
-
-function run() {
-	var code = editor.getValue();
-	var xhr = new XMLHttpRequest();
-	var post;	
-	console.log("run");
-	console.log(code);
-    xhr.open("post","run",false);
-	xhr.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded")
-	post = encodeURIComponent("text") + "=" + encodeURIComponent(code) + "&";
-	xhr.send(post);
-	console.log(xhr.status);	
-
-}
-
-function stop() {
-	var xhr = new XMLHttpRequest();
-	var post;	
-	console.log("stop");
-    xhr.open("post","stop",false);
-	xhr.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded")
-	post = "";
-	xhr.send(post);
-	console.log(xhr.status);	
-
-}
-
-function reboot() {
-	var xhr = new XMLHttpRequest();
-	var post;	
-	console.log("reboot");
-    xhr.open("post","reboot",false);
-	xhr.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded")
-	post = "";
-	xhr.send(post);
-	console.log(xhr.status);	
-
-}
-
-function ex1() {
-	var code_ex1 = 
-	"int main(int argn, char* argv[])\n" +
-	"{\n" +
-	"    led(0, 255,255,255);\n"+
-	"    led(1, 255,0 ,255);\n" +
-	"    led(2, 0 ,255,255);\n" +
-	"    led(3, 255,255,0);\n"  +
- 	"    return 0;\n" +
-    "}\n"
-    editor.setValue(code_ex1);
-	editor.clearSelection();
-}
-
-function ex2() {
-	var code_ex1 = 
-	"int main(int argn, char* argv[])\n" +
-	"{\n" +
-	"    led(0, 255, 0, 255);\n" +
-	"    sleep(1);\n"            +
-	"    led(0, 255, 255 ,0);\n" +
-	"    sleep(1);\n"            +
-	"    led(0, 0,255 , 255);\n" +
- 	"    return 0;\n" +
-    "}\n"
-    editor.setValue(code_ex1);
-	editor.clearSelection();
-}
-
-function ex3() {
-	var code_ex1 = 
-	"int main(int argn, char* argv[])\n" +
-	"{\n" +
-	"    led(0, 255,255,255);\n"+
-	"    led(1, 255,255 ,255);\n" +
-	"    led(2, 0 ,255,255);\n" +
-	"    led(3, 0,255,0);\n"  +
- 	"    return 0;\n" +
-    "}\n"
-    editor.setValue(code_ex1);
-	editor.clearSelection();
-}
-
-function ex4() {
-	var code_ex1 = 
-	"int main(int argn, char* argv[])\n" +
-	"{\n" +
-	"    led(0, 255,255,255);\n"+
-	"    led(1, 255,255 ,255);\n" +
-	"    led(2, 0 ,255,255);\n" +
-	"    led(3, 0,255,0);\n"  +
- 	"    return 0;\n" +
-    "}\n"
-    editor.setValue(code_ex1);
-	editor.clearSelection();
-}
-
-function ex5() {
-	var code_ex1 = 
-	"int main(int argn, char* argv[])\n" +
-	"{\n" +
-	"    led(0, 255,255,255);\n"+
-	"    led(1, 255,255 ,255);\n" +
-	"    led(2, 0 ,255,255);\n" +
-	"    led(3, 0,255,0);\n"  +
- 	"    return 0;\n" +
-    "}\n"
-    editor.setValue(code_ex1);
-	editor.clearSelection();
-}
-
-function ex6() {
-	var code_ex1 = 
-	"int main(int argn, char* argv[])\n" +
-	"{\n" +
-	"    led(0, 255,255,255);\n"+
-	"    led(1, 255,255 ,255);\n" +
-	"    led(2, 0 ,255,255);\n" +
-	"    led(3, 0,255,0);\n"  +
- 	"    return 0;\n" +
-    "}\n"
-    editor.setValue(code_ex1);
-	editor.clearSelection();
-}
+	var $ = document.getElementById.bind(document);
+	var dom = require("ace/lib/dom");
+	
+	//add command to all new editor instaces
+	require("ace/commands/default_commands").commands.push({
+		name: "Toggle Fullscreen",
+		bindKey: "F11",
+		exec: function(editor) {
+			dom.toggleCssClass(document.body, "fullScreen")
+			dom.toggleCssClass(editor.container, "fullScreen")
+			editor.resize()
+		}
+	})
+	
+	// create first editor
+	var editor = ace.edit("editor");
+	editor.setTheme("ace/theme/tomorrow");
+	editor.session.setMode("ace/mode/c_cpp");
+	
+	function run() {
+		var code = editor.getValue();
+		var xhr = new XMLHttpRequest();
+		var post;	
+		console.log("run");
+		console.log(code);
+		xhr.open("post","run",false);
+		xhr.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded")
+		post = encodeURIComponent("text") + "=" + encodeURIComponent(code) + "&";
+		xhr.send(post);
+		console.log(xhr.status);	
+	
+	}
+	
+	function stop() {
+		var xhr = new XMLHttpRequest();
+		var post;	
+		console.log("stop");
+		xhr.open("post","stop",false);
+		xhr.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded")
+		post = "";
+		xhr.send(post);
+		console.log(xhr.status);	
+	
+	}
+	
+	function reboot() {
+		var xhr = new XMLHttpRequest();
+		var post;	
+		console.log("reboot");
+		xhr.open("post","reboot",false);
+		xhr.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded")
+		post = "";
+		xhr.send(post);
+		console.log(xhr.status);	
+	
+	}
+	
+	function ex1() {
+		var code_ex1 = 
+		"int main(int argn, char* argv[])\n" +
+		"{\n" +
+		"    led(0, 255,255,255);\n"+
+		"    led(1, 255,0 ,255);\n" +
+		"    led(2, 0 ,255,255);\n" +
+		"    led(3, 255,255,0);\n"  +
+		"    return 0;\n" +
+		"}\n"
+		editor.setValue(code_ex1);
+		editor.clearSelection();
+	}
+	
+	function ex2() {
+		var code_ex1 = 
+		"int main(int argn, char* argv[])\n" +
+		"{\n" +
+		"    led(0, 255, 0, 255);\n" +
+		"    sleep(1);\n"            +
+		"    led(0, 255, 255 ,0);\n" +
+		"    sleep(1);\n"            +
+		"    led(0, 0,255 , 255);\n" +
+		"    return 0;\n" +
+		"}\n"
+		editor.setValue(code_ex1);
+		editor.clearSelection();
+	}
+	
+	function ex3() {
+		var code_ex1 = 
+		"int main(int argn, char* argv[])\n" +
+		"{\n" +
+		"    led(0, 255,255,255);\n"+
+		"    led(1, 255,255 ,255);\n" +
+		"    led(2, 0 ,255,255);\n" +
+		"    led(3, 0,255,0);\n"  +
+		"    return 0;\n" +
+		"}\n"
+		editor.setValue(code_ex1);
+		editor.clearSelection();
+	}
+	
+	function ex4() {
+		var code_ex1 = 
+		"int main(int argn, char* argv[])\n" +
+		"{\n" +
+		"    led(0, 255,255,255);\n"+
+		"    led(1, 255,255 ,255);\n" +
+		"    led(2, 0 ,255,255);\n" +
+		"    led(3, 0,255,0);\n"  +
+		"    return 0;\n" +
+		"}\n"
+		editor.setValue(code_ex1);
+		editor.clearSelection();
+	}
+	
+	function ex5() {
+		var code_ex1 = 
+		"int main(int argn, char* argv[])\n" +
+		"{\n" +
+		"    led(0, 255,255,255);\n"+
+		"    led(1, 255,255 ,255);\n" +
+		"    led(2, 0 ,255,255);\n" +
+		"    led(3, 0,255,0);\n"  +
+		"    return 0;\n" +
+		"}\n"
+		editor.setValue(code_ex1);
+		editor.clearSelection();
+	}
+	
+	function ex6() {
+		var code_ex1 = 
+		"int main(int argn, char* argv[])\n" +
+		"{\n" +
+		"    led(0, 255,255,255);\n"+
+		"    led(1, 255,255 ,255);\n" +
+		"    led(2, 0 ,255,255);\n" +
+		"    led(3, 0,255,0);\n"  +
+		"    return 0;\n" +
+		"}\n"
+		editor.setValue(code_ex1);
+		editor.clearSelection();
+	}
 
 </script>
 
-<!-- 对话框 -->
+<!-- API reference doc-->
 <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3 id="ModalLabel">API Reference Document</h3>
-  </div>
-  <div class="modal-body">
-    <p class="class="bg-info">Function led()</p>
-    <p class="class="bg-info">Function sleep()</p>
-    <p class="class="bg-info">Function printf()</p>
-    <p class="class="bg-info">Function test()</p>
-    <p class="class="bg-info">Function test()</p>
-    <p class="class="bg-info">Function test()</p>
-    <p class="class="bg-info">Function test()</p>
-    <p class="class="bg-info">Function test()</p>
-    <p class="class="bg-info">Function test()</p>
-    <p class="class="bg-info">Function test()</p>
-    <p class="class="bg-info">Function test()</p>
-    <p>Function test()</p>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-  </div>
+	</div>
+    <div class="modal-body">
+      <div class="alert alert-info" role="alert"><b>void led(int id, char r, char g, char b)</b></div>
+      <p>Functionality: Sleep for seconds</p>
+      <p>Argument: </p>
+      <p>id: The id of led can be 0-3</p>
+      <p>r: The red color of led</p>
+      <p>g: The greem color of led</p>
+      <p>b: The blue color of led</p>
+      <div class="alert alert-info" role="alert"><b>unsigned int sleep (unsigned int seconds)</b></div>
+      <p>Functionality: Sleep for seconds</p>
+      <p>Argument: </p>
+      <p>seconds The seconds for sleeping</p>
+      <div class="alert alert-info" role="alert"><b>int usleep (int useconds)</b></div>
+      <p>Functionality: Sleep for micro seconds</p>
+      <p>Argument: </p>
+      <p>usecods: The micro seconds for sleeping</p>
+      <div class="alert alert-info" role="alert"><b>int printf (char * format, ...)</b></div>
+      <p>Functionality: print the string to the console</p>
+      <p>Argument: </p>
+      <p>format:output format string</p>
+    </div>
+    <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">close</button>
+    </div>
 </div>
 
 </body>
