--- a/index.html
+++ b/index.html
@@ -88,9 +88,25 @@ int main(int argn, char* argv[])
     ex7
 </span>
 </div>
-<div id="error" class="bs-callout bs-callout-danger"></div>
+
 <div class="panel panel-default">
-<span onclick="clean()" class="btn btn-warning" title="clear the console log">
+<span onclick="clean_error()" class="btn btn-warning" title="clear the error log">
+    Clear error
+	</span>
+<div class="panel-heading">
+    <a data-toggle="collapse" data-parent="#accordion" href="#error">
+    <div class="alert alert-error" role="alert"><b>Error</b>
+    </div>
+    </a>
+</div>
+<div id="error" class="panel-collapse collapse">
+  </div>
+</div>
+</div>
+<div>
+
+<div class="panel panel-default">
+<span onclick="clean_console()" class="btn btn-warning" title="clear the console log">
     Clear console
 	</span>
 <div class="panel-heading">
@@ -250,19 +266,31 @@ int main(int argn, char* argv[])
 
 	}
 
-	function clean() {
+	function clean_console() {
 		document.getElementById("console").innerHTML = " ";	
-	};		
+	};	
+	
+		function clean_console() {
+		document.getElementById("error").innerHTML = " ";	
+	};			
 
-	function polling(){
+	function console_polling(){
 		var xhr = new XMLHttpRequest();	
-		console.log("console");
 		xhr.open("get","console",false);
 		xhr.send();
 		var get = xhr.responseText;
 		document.getElementById("console").innerHTML += "<p>"+ get+"<\p>";
 	}; 
-	setInterval(polling, 1000);
+	setInterval(console_polling, 1000);
+	
+	function error_polling(){
+		var xhr = new XMLHttpRequest();	
+		xhr.open("get","error",false);
+		xhr.send();
+		var get = xhr.responseText;
+		document.getElementById("error").innerHTML += "<p>"+ get+"<\p>";
+	}; 
+	setInterval(error_polling, 1000);
     
 </script>
 
