--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ int main(int argn, char* argv[])
 		document.getElementById("console").innerHTML = " ";	
 	};	
 	
-		function clean_console() {
+		function clean_error() {
 		document.getElementById("error").innerHTML = " ";	
 	};			
 
