--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ int main(int argn, char* argv[])
     </div>
     </a>
 </div>
-<div id="error" class="panel-collapse collapse">
+<div id="error" class="panel-collapse collapse in">
   </div>
 </div>
 </div>
@@ -115,7 +115,7 @@ int main(int argn, char* argv[])
     </div>
     </a>
 </div>
-<div id="console" class="panel-collapse collapse">
+<div id="console" class="panel-collapse collapse in">
   </div>
 </div>
 </div>
