--- a/index.html
+++ b/index.html
@@ -47,30 +47,28 @@
 </style>
 </head>
 <body>
-<img id=broadpic src="" alt="">
+<img id=broadpic alt="">
 <div id="IDE" class="">
+  <a href="#savedialog" role="button" class="btn" data-toggle="modal" title="save the program">save</a>
   <span onclick="run()" class="btn btn-success" title="run the program">
     run
   </span>
   <span onclick="stop()" class="btn btn-warning" title="stop the progrtam">
     stop
   </span>
-  <a href="#myModal" role="button" class="btn btn-info" data-toggle="modal">API DOC</a>
+  <a href="#api_doc" role="button" class="btn btn-info" data-toggle="modal" title="show the API">API</a>
   <span onclick="reboot()" class="btn btn-danger" title="reboot the broad">
     reboot
   </span>
   <span>
   <div class="btn-group">
-<button type="button" class="btn btn-primary">
-Configrations
+<button type="button" class="btn btn-primary" title="change the broad configuration">
+Configurations
 </button>
 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
     <span class="caret"></span>
 </button>
   <ul id=version_list class="dropdown-menu" role="menu">
-
-    <li><a href="#" onClick= configrations(event)>PWM</a></li>
-    <li><a href="#" onClick= configrations(event)>Analog</a></li>
   </ul>
 </div>
 </span>
@@ -81,29 +79,9 @@ int main(int argn, char* argv[])
 	return 0;
 }
 </pre>
-<span onclick="ex1()" class="btn btn-info">
-    ex1
-</span>
-<span onclick="ex2()" class="btn btn-info">
-    ex2
-</span>
-<span onclick="ex3()" class="btn btn-info">
-    ex3
-</span>
-<span onclick="ex4()" class="btn btn-info">
-    ex4
-</span>
-<span onclick="ex5()" class="btn btn-info">
-    ex5
-</span>
-<span onclick="ex6()" class="btn btn-info">
-    ex6
-</span>
-<span onclick="ex7()" class="btn btn-info">
-    ex7
-</span>
 </div>
-
+<div id=Ex>
+</div>
 <div class="panel panel-default">
 <span onclick="clean_error()" class="btn btn-warning" title="clear the error log">
     Clear error
@@ -136,219 +114,26 @@ int main(int argn, char* argv[])
 </div>
 <div>
 
-
-<script src="./ace/ace.js" type="text/javascript" charset="utf-8"></script>
-<script>
-    var debug = true;
-	function debuginf(string) {
-		if (debug == true) {
-			console.log(string);
-		}
-	}
-	function ajax_rest_post(url, arg) {
-		var xhr = new XMLHttpRequest();
-		var post;
-		xhr.open("post",url,false);
-		xhr.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded")
-		if (arg != undefined) 
-			post = encodeURIComponent("text") + "=" + encodeURIComponent(arg) + "&";
-		else
-			post = null;
-		xhr.send(post);
-		debuginf(xhr.status);	
-	}
-
-	var dom = require("ace/lib/dom");
-	
-	//add command to all new editor instaces
-	require("ace/commands/default_commands").commands.push({
-		name: "Toggle Fullscreen",
-		bindKey: "F11",
-		exec: function(editor) {
-			dom.toggleCssClass(document.body, "fullScreen")
-			dom.toggleCssClass(editor.container, "fullScreen")
-			editor.resize()
-		}
-	})
-	
-	// create first editor
-	var editor = ace.edit("editor");
-	editor.setTheme("ace/theme/tomorrow");
-	editor.session.setMode("ace/mode/c_cpp");
-	
-
-	// event handle for webpage
-	function configrations(event){
-		version = event.srcElement.innerText;
-		document.getElementById('broadpic').src = 'config/'+version+'.jpg';
-		debuginf("configrations");
-		debuginf(version);
-		ajax_rest_post("config",version);
-
-	}
-	function run() {
-		var code = editor.getValue();
-		debuginf("run");
-		debuginf(code);
-		ajax_rest_post("run",code);
-	}
-	
-	function stop() {
-		debuginf("stop");
-		ajax_rest_post("stop");
-	}
-	
-	function reboot() {
-		debuginf("reboot");
-		ajax_rest_post("reboot");
-	}
-	
-	function ex1() {
-		var code_ex1 = 
-		"int main(int argn, char* argv[])\n" +
-		"{\n" +
-		"    led(0, 255,255,255);\n"+
-		"    led(1, 255,0 ,255);\n" +
-		"    led(2, 0 ,255,255);\n" +
-		"    led(3, 255,255,0);\n"  +
-		"    return 0;\n" +
-		"}\n"
-		editor.setValue(code_ex1);
-		editor.clearSelection();
-	}
-	
-	function ex2() {
-		var code_ex1 = 
-		"int main(int argn, char* argv[])\n" +
-		"{\n" +
-		"    led(0, 255, 0, 255);\n" +
-		"    sleep(1);\n"            +
-		"    led(0, 255, 255 ,0);\n" +
-		"    sleep(1);\n"            +
-		"    led(0, 0,255 , 255);\n" +
-		"    return 0;\n" +
-		"}\n"
-		editor.setValue(code_ex1);
-		editor.clearSelection();
-	}
-	
-	function ex3() {
-		var code_ex1 = 
-		"int main(int argn, char* argv[])\n" +
-		"{\n" +
-		"    led(0, 255,255,255);\n"+
-		"    led(1, 255,255 ,255);\n" +
-		"    led(2, 0 ,255,255);\n" +
-		"    led(3, 0,255,0);\n"  +
-		"    return 0;\n" +
-		"}\n"
-		editor.setValue(code_ex1);
-		editor.clearSelection();
-	}
-	
-	function ex4() {
-		var code_ex1 = 
-		"int main(int argn, char* argv[])\n" +
-		"{\n" +
-		"    led(0, 255,255,255);\n"+
-		"    led(1, 255,255 ,255);\n" +
-		"    led(2, 0 ,255,255);\n" +
-		"    led(3, 0,255,0);\n"  +
-		"    return 0;\n" +
-		"}\n"
-		editor.setValue(code_ex1);
-		editor.clearSelection();
-	}
-	
-	function ex5() {
-		var code_ex1 = 
-		"int main(int argn, char* argv[])\n" +
-		"{\n" +
-		"    led(0, 255,255,255);\n"+
-		"    led(1, 255,255 ,255);\n" +
-		"    led(2, 0 ,255,255);\n" +
-		"    led(3, 0,255,0);\n"  +
-		"    return 0;\n" +
-		"}\n"
-		editor.setValue(code_ex1);
-		editor.clearSelection();
-	}
-	
-	function ex6() {
-		var code_ex1 = 
-		"int main(int argn, char* argv[])\n" +
-		"{\n" +
-		"    led(0, 255,255,255);\n"+
-		"    led(1, 255,255 ,255);\n" +
-		"    led(2, 0 ,255,255);\n" +
-		"    led(3, 0,255,0);\n"  +
-		"    return 0;\n" +
-		"}\n"
-		editor.setValue(code_ex1);
-		editor.clearSelection();
-
-	}
-
-	function clean_console() {
-		document.getElementById("console").innerHTML = " ";	
-	};	
-	
-		function clean_error() {
-		document.getElementById("error").innerHTML = " ";	
-	};			
-
-	function console_polling(){
-		var xhr = new XMLHttpRequest();	
-		xhr.open("get","console",false);
-		xhr.send();
-		var get = xhr.responseText;
-		document.getElementById("console").innerHTML += "<p>"+ get+"<\p>";
-	}; 
-	//setInterval(console_polling, 1000);
-	
-	function error_polling(){
-		var xhr = new XMLHttpRequest();	
-		xhr.open("get","error",false);
-		xhr.send();
-		var get = xhr.responseText;
-		document.getElementById("error").innerHTML += "<p>"+ get+"<\p>";
-	}; 
-	//setInterval(error_polling, 1000);
-    
-	function delay_refresh() {
-		window.location.reload(); 
-	}
-	function page_refresh() {
-		setTimeout('delay_refresh()',60000); 
-
-	}
-	
-	window.onload=function() {
-		var xhr = new XMLHttpRequest();	
-		xhr.open("get","load",false);
-		xhr.send();
-		var versionlist = xhr.responseText;
-		debuginf(versionlist);
-		var list = versionlist.split(',');
-		var html_list = "";
-		debuginf(list);
-		for (var index in list) {
-			debuginf(list[index]);
-			var name = list[index].split('.')[0];
-			var ext  = list[index].split('.')[1];
-			if (ext == 'jpg') {
-				html_list += "<li><a href='#' onClick= configrations(event)>"+ 
-				name +"</a></li>";
-			}
-		}
-		document.getElementById("version_list").innerHTML = html_list;
-		debuginf(list);
-	}
-	
-</script>
+<!-- Save file dialog -->
+<div class="modal hide fade" id="savedialog">
+<div class="modal-header">
+<button type="button" class="close" data-dismiss="modal">&times;</button>
+<h3>Save the program</h3>
+</div>
+<div class="modal-body">
+<div class="input-group">
+  <input id="dialog_filename" type="text" class="form-control" placeholder="filename">
+    <span class="input-group-addon">.c</span>
+</div>
+</div>
+<div class="modal-footer">
+<a href="#"  data-dismiss="modal" class="btn">close</a>
+<a href="#"  data-dismiss="modal" class="btn btn-primary" onclick="save()" >save</a>
+</div>
+</div>
 
 <!-- API reference doc-->
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+<div id="api_doc" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3 id="ModalLabel">API Reference Document</h3>
@@ -419,6 +204,179 @@ int main(int argn, char* argv[])
     <button class="btn" data-dismiss="modal" aria-hidden="true">close</button>
     </div>
 </div>
+
+<script src="./ace/ace.js" type="text/javascript" charset="utf-8"></script>
+<script>
+    var debug = true;
+	function debuginf(string) {
+		if (debug == true) {
+			console.log(string);
+		}
+	}
+	function ajax_rest_post(url, arg1, arg2) {
+		var xhr = new XMLHttpRequest();
+		var post;
+		xhr.open("post",url,false);
+		xhr.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded")
+		if (arg1 != undefined) 
+			post = encodeURIComponent("arg1") + "=" + encodeURIComponent(arg1) + "&";
+		else
+			post = null;
+		if (arg2 != undefined) 
+			post += encodeURIComponent("arg2") + "=" + encodeURIComponent(arg2) + "&";
+		xhr.send(post);
+		debuginf(xhr.status);	
+	}
+
+	function load_config_list() {
+		var xhr = new XMLHttpRequest();	
+		xhr.open("get","load_config",false);
+		xhr.send();
+		var versionlist = xhr.responseText;
+		debuginf(versionlist);
+		var list = versionlist.split(',');
+		var html_list = "";
+		debuginf(list);
+		for (var index in list) {
+			debuginf(list[index]);
+			var name = list[index].split('.')[0];
+			var ext  = list[index].split('.')[1];
+			if (ext == 'jpg') {
+				html_list += "<li><a href='#' onClick= configrations(event)>"+ 
+				name +"</a></li>";
+			}
+		}
+		document.getElementById("version_list").innerHTML = html_list;
+	}
+	function load_example_list() {
+		var xhr = new XMLHttpRequest();	
+		xhr.open("get","load_example",false);
+		xhr.send();
+		var examplelist = xhr.responseText;
+		var list = examplelist.split(',');
+		var html_list = "";
+		debuginf(list);
+		for (var index in list) {
+			debuginf(list[index]);
+			var name = list[index].split('.')[0];
+			var ext  = list[index].split('.')[1];
+			if (ext == 'c') {
+				html_list += "<span id=" + name + " onclick='load_example(event)' class='btn btn-info'>" + name + "</span>";
+			}
+		}
+		document.getElementById("Ex").innerHTML = html_list;
+	}
+	
+	var dom = require("ace/lib/dom");
+	//add command to all new editor instaces
+	require("ace/commands/default_commands").commands.push({
+		name: "Toggle Fullscreen",
+		bindKey: "F11",
+		exec: function(editor) {
+			dom.toggleCssClass(document.body, "fullScreen")
+			dom.toggleCssClass(editor.container, "fullScreen")
+			editor.resize()
+		}
+	})
+	
+	// create first editor
+	var editor = ace.edit("editor");
+	editor.setTheme("ace/theme/tomorrow");
+	editor.session.setMode("ace/mode/c_cpp");
+	
+	// event handle for webpage
+	function save() {
+		var code = editor.getValue();
+		var file = document.getElementById("dialog_filename").value;
+		debuginf("save");
+		if (file != "") {
+			ajax_rest_post("save", file, code);
+			load_example_list();
+			return true;
+		} else
+			return false;
+	}
+	
+	function run() {
+		var code = editor.getValue();
+		debuginf("run");
+		debuginf(code);
+		ajax_rest_post("run",code);
+	}
+	
+	function stop() {
+		debuginf("stop");
+		ajax_rest_post("stop");
+	}
+	
+	function reboot() {
+		debuginf("reboot");
+		ajax_rest_post("reboot");
+	}
+	
+	function configrations(event){
+		var version = event.srcElement.innerText;
+		document.getElementById('broadpic').src = 'config/'+version+'.jpg';
+		debuginf("configrations");
+		debuginf(version);
+		ajax_rest_post("config",version);
+
+	}
+	
+	function load_example(event) {
+		var example = event.srcElement.innerText;
+		debuginf(example);
+		var file = example+'.c';
+		debuginf("load code");
+		var xhr = new XMLHttpRequest();	
+		xhr.open("get","program/"+file,false);
+		xhr.send();
+		var get = xhr.responseText;
+		debuginf(get);
+		editor.setValue(get);
+		editor.clearSelection();
+	}
+
+	function clean_console() {
+		document.getElementById("console").innerHTML = " ";	
+	};	
+	
+		function clean_error() {
+		document.getElementById("error").innerHTML = " ";	
+	};			
+
+	function console_polling(){
+		var xhr = new XMLHttpRequest();	
+		xhr.open("get","console",false);
+		xhr.send();
+		var get = xhr.responseText;
+		document.getElementById("console").innerHTML += "<p>"+ get+"<\p>";
+	}; 
+	//setInterval(console_polling, 1000);
+	
+	function error_polling(){
+		var xhr = new XMLHttpRequest();	
+		xhr.open("get","error",false);
+		xhr.send();
+		var get = xhr.responseText;
+		document.getElementById("error").innerHTML += "<p>"+ get+"<\p>";
+	}; 
+	//setInterval(error_polling, 1000);
+    
+	function delay_refresh() {
+		window.location.reload(); 
+	}
+	function page_refresh() {
+		setTimeout('delay_refresh()',60000); 
+
+	}
+	
+	window.onload=function() {
+		load_config_list();
+		load_example_list();
+	}
+	
+</script>
 
 </body>
 </html>
