--- a/index.html
+++ b/index.html
@@ -132,6 +132,23 @@ int main(int argn, char* argv[])
 </div>
 </div>
 
+<!-- pop dialog -->
+<div class="modal hide fade" id="popdialog">
+<div class="modal-header">
+<button type="button" class="close" data-dismiss="modal">&times;</button>
+<h3>Are you sure to delete?</h3>
+</div>
+<div class="modal-body">
+<div class="input-group">
+<p id="pop_message"></p>
+</div>
+</div>
+<div class="modal-footer">
+<a href="#"  data-dismiss="modal" class="btn">No</a>
+<a href="#"  data-dismiss="modal" class="btn btn-primary" onclick="do_delete_example()" >Yes</a>
+</div>
+</div>
+
 <!-- API reference doc-->
 <div id="api_doc" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-header">
@@ -219,7 +236,7 @@ int main(int argn, char* argv[])
 			var name = list[index].split('.')[0];
 			var ext  = list[index].split('.')[1];
 			if (ext == 'c') {
-				html_list += "<span id=" + name + " onclick='load_example(event)' class='btn btn-info'>" + name + "</span>";
+				html_list += "<span id=" + name + " onmousedown='mousedown(event)' onmouseup='mouseup(event)' class='btn btn-info'>" + name + "</span>";
 			}
 		}
 		document.getElementById("Ex").innerHTML = html_list;
@@ -276,7 +293,6 @@ int main(int argn, char* argv[])
 		debuginf(html_list);
 		document.getElementById("accordion").innerHTML = html_list;
 	}
-	
 	
 	var dom = require("ace/lib/dom");
 	//add command to all new editor instaces
@@ -346,12 +362,38 @@ int main(int argn, char* argv[])
 		editor.setValue(get);
 		editor.clearSelection();
 	}
+	
+
+	var timer = null;
+	function mousedown(event){
+		load_example(event);
+		timer = setTimeout(function() {delete_example(event)}, 1500 );//set the timeout
+	};
+	function mouseup(event){
+		clearTimeout(timer);
+	};
+	
+	function delete_example(event) {
+		var file = event.srcElement.innerText;
+		debuginf(file);
+		document.getElementById("pop_message").innerText = file;	
+		$("#popdialog").modal();
+	}
+	
+	function do_delete_example()
+	{
+		file = document.getElementById("pop_message").innerText;	
+		debuginf("do delete code");
+		debuginf(file);
+		ajax_rest_post("delete",file);
+		load_example_list();
+	}
 
 	function clean_console() {
 		document.getElementById("console").innerHTML = " ";	
 	};	
 	
-		function clean_error() {
+	function clean_error() {
 		document.getElementById("error").innerHTML = " ";	
 	};			
 
